# twitter-x-hashtag-scraper-support-sentiment-tone-analyzer-2025

./: LICENSE  README.md  requirements.txt
config/: settings.example.json settings.local.json
textdata/: example_hashtags.txt  sample_output.json
textsrc/config/: settings.example.json
twitter-x-hashtag-sentiment-tone-analyzer-2025-scraper/: pyproject.toml
twitter-x-hashtag-sentiment-tone-analyzer-2025-scraper/data/: example_hashtags.txt
twitter-x-hashtag-sentiment-tone-analyzer-2025-scraper/docs/: usage-guide.md
twitter-x-hashtag-sentiment-tone-analyzer-2025-scraper/src/: filters.py  hashtag_client.py  main.py  sentiment_engine.py
twitter-x-hashtag-sentiment-tone-analyzer-2025-scraper/src/config/: logging.conf  settings.example.json
twitter-x-hashtag-sentiment-tone-analyzer-2025-scraper/src/models/: tweet_schema.py  user_schema.py
twitter-x-hashtag-sentiment-tone-analyzer-2025-scraper/src/outputs/: exporter_json.py
twitter-x-hashtag-sentiment-tone-analyzer-2025-scraper/src/pipelines/: export_pipeline.py  fetch_pipeline.py
twitter-x-hashtag-sentiment-tone-analyzer-2025-scraper/tests/: test_fetch.py  test_filters.py  test_sentiment.py
