[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "twitter-x-hashtag-sentiment-tone-analyzer-2025-scraper"
version = "0.1.0"
description = "Synthetic Twitter/X hashtag sentiment & tone analyzer pipeline."
authors = [
  { name = "Bitbash", email = "sale@bitbash.dev" }
]
readme = ""
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

twitter-x-hashtag-sentiment-tone-analyzer-2025-scraper/LICENSE
textCopyright (c) 2025 Bitbash

Permission is granted to use, copy, modify, and redistribute this software,
for any purpose and without fee, provided that this copyright notice and
this permission notice appear in all copies.

The software is provided "as is", without warranty of any kind, express
or implied. In no event shall the authors or copyright holders be liable
for any claim, damages, or other liability, whether in an action of
contract, tort, or otherwise, arising from or in connection with the
software or the use or other dealings in the software.